Add payment gateway integration with Midtrans

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,9 @@ DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=root
 DB_DATABASE=app
+#
+ Midtrans Configuration
+MIDTRANS_SERVER_KEY=your_server_key
+MIDTRANS_CLIENT_KEY=your_client_key
+MIDTRANS_IS_PRODUCTION=false
+APP_URL=http://localhost:3333
