--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@swc/core": "1.11.24",
     "@types/luxon": "^3.7.1",
     "@types/node": "^22.15.18",
+    "@types/pdfkit": "^0.17.4",
     "eslint": "^9.26.0",
     "hot-hook": "^0.4.0",
     "pino-pretty": "^13.0.0",
@@ -60,6 +61,7 @@
     "@vinejs/vine": "^3.0.1",
     "luxon": "^3.7.2",
     "mysql2": "^3.15.3",
+    "pdfkit": "^0.17.2",
     "reflect-metadata": "^0.2.2"
   },
   "hotHook": {
